# sandbox_server/__init__.py
@@ -11,7 +11,7 @@ def create_app():
     app = Flask(__name__)
 
     # Register blueprints
-    from .routes import execute, execute_worker, read_file, write_file, read_partial, auth, auth_github, workspace
+    from .routes import execute, execute_worker, read_file, write_file, read_partial, auth, auth_github, workspace, waitlist
     app.register_blueprint(execute.bp, url_prefix="/api")
     app.register_blueprint(execute_worker.bp, url_prefix="/api")
     app.register_blueprint(read_file.bp, url_prefix="/api")
@@ -20,5 +20,6 @@ def create_app():
     app.register_blueprint(workspace.bp, url_prefix="/api")
     app.register_blueprint(auth.bp, url_prefix="/api")
     app.register_blueprint(auth_github.bp, url_prefix="/api")
+    app.register_blueprint(waitlist.bp, url_prefix="/api")
 
     return app
